resources/dsaas-stg/dsaas-preview/build-tool-detector.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    service: build-tool-detector
  name: build-tool-detector
spec:
  host: detector.api.prod-preview.openshift.io
  port:
    targetPort: "8099"
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: build-tool-detector
    weight: 100
  wildcardPolicy: None
